--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint",
     "db:seed": "npx tsx prisma/seed.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@tanstack/react-table": "^8.21.3",
@@ -38,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
