--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dropzone": "^14.3.8",
     "react-loading-skeleton": "^3.5.0",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.4.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
