--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "googleapis": "^166.0.0",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
